[package]
name = "ntex-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ntex-mqtt = "0.9.0"
env_logger = "0.9.1"
log = "0.4.17"
ntex = { version = "0.5", features = ["tokio", "openssl"] }
openssl = "0.10.42"

[dev-dependencies]
http = "0.2.8"

